# prime_number_server

./: .gitignore  pyproject.toml
apps/number/: apps.py  serializers.py  services.py  urls.py  views.py
core/: settings.py  urls.py
