[tool.poetry]
name = "prime-number-server"
version = "0.1.0"
description = "Teach server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
